# temporal-release-manager-example

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEMO_GUIDE.md  IMPROVEMENTS_SUMMARY.md  README.md  REALISTIC_DEMO_GUIDE.md  TEMPORAL_PROJECT_GUIDE.md  TESTING.md  TEST_CHECKLIST.md  quick-test.sh  start-system.sh
.specify/memory/: constitution.md
backend/: .env.example  README.md  create_test_releases.py  debug_workflows.py  demo_releases.py  pyproject.toml  test_api.py  test_hierarchy_query.py  test_parallel_execution.py  test_workflows.py  worker.py  workflows.py
backend/src/: main.py
backend/src/api/: auth.py  entities.py  metrics.py  releases.py
backend/src/core/: cache.py  config.py  env_validation.py  errors.py  logging.py  security.py  validation.py
backend/src/middleware/: __init__.py  rate_limit.py  security.py
backend/src/models/: auth.py  entities.py
backend/src/services/: auth_service.py  batch_query.py  entity_service.py  temporal_client.py
backend/tests/: factories.py
backend/tests/integration/: test_auth_flow.py  test_release_flow.py
backend/tests/unit/: test_auth_service.py  test_config.py  test_entities.py  test_factories.py
frontend/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: EntityTree.tsx  ErrorBoundary.tsx  ExportButtons.tsx  Layout.tsx  Login.tsx  ProtectedRoute.tsx  ReleaseList.tsx  ReleaseListSkeleton.tsx  ScreenReaderOnly.tsx  SearchFilter.tsx
frontend/src/hooks/: useAuth.ts  usePaginationPrefetch.ts  useReleases.ts  useSearchFilter.ts
frontend/src/pages/: Dashboard.tsx  LoginPage.tsx  ReleaseDetailPage.tsx
frontend/src/services/: api.ts  authService.ts  releaseService.ts
frontend/src/types/: auth.ts  entities.ts
specs/001-temporal-bff-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-temporal-bff-system/checklists/: requirements.md
specs/001-temporal-bff-system/contracts/: README.md  api.openapi.yaml
